# fitness_checker

./: README.md  app.py  pyproject.toml
data/: progress.json
